# notes

./: Readme.md
writeups/: CTF-Preparing.md  Readme.md
writeups/Cybercolesium3/: Reame.md
writeups/Cybercolesium3/Name/: Readme.md  solution.py
writeups/Tinkoff2024/: Readme.md
writeups/Tinkoff2024/demiurg/: Readme.md
writeups/Tinkoff2024/demiurg/czf/: docker-compose.yml
writeups/Tinkoff2024/demiurg/czf/apigateway/: Dockerfile  README.md
writeups/Tinkoff2024/demiurg/czf/shop/: Dockerfile  README.md
writeups/Tinkoff2024/fire/: Readme.md
writeups/Tinkoff2024/fire/fire/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum
writeups/Tinkoff2024/gamearmor/: Readme.md
writeups/Tinkoff2024/robear/: Dockerfile  Readme.md  docker-compose.yml  nginx.conf  solution.py
writeups/Tinkoff2024/robear/server/: build.sbt
writeups/Tinkoff2024/robear/static/: index.html  logout.html  register.html  setup.html  status.html
writeups/Tinkoff2024/s3curestorage/: Readme.md  app.py
writeups/Tinkoff2024/tvlink/: Readme.md  shell.py  solution.py
writeups/Tinkoff2024/tvlink/tvlink-firmware_345b8e0/: signature.txt  upgrade.py
writeups/Tinkoff2024/tvlink/tvlink_fc83f20/: pyproject.toml
writeups/Tinkoff2024/tvlink/tvlink_fc83f20/tvlink/: __init__.py  __main__.py  app.py  gunicorn.py
writeups/Tinkoff2024/tvlink/tvlink_fc83f20/tvlink/static/: TVLINK.CSS
writeups/Tinkoff2024/tvlink/tvlink_fc83f20/tvlink/templates/: base.html  error.html  header.html  help.html  index.html  login.html  navi.html  tv.html  upgrade-status.html  upgrade.html  x.html
(+48 files in other folders)
